--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 
 
 
@@ -864,19 +865,20 @@ h6,
   color: #b8312f!important;
 }
 #features3-1g H5 {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 19px;
-  color: #2b0680;
+  color: #000000;
+  text-align: center;
 }
 #features3-1h H5 {
   font-family: 'Lato', sans-serif;
-  color: #2b0680;
+  color: #000000;
   font-size: 19px;
   text-align: center;
 }
 #features3-1j H5 {
-  color: #2b0680;
-  font-family: 'Lato', sans-serif;
+  color: #000000;
+  font-family: 'Raleway', sans-serif;
   font-size: 19px;
   text-align: center;
 }
